--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ li a {
 
 /* Links will change color when hovered over */
 li a:hover {
- background-color: #a09f9f;
+ background-color: #FFFF00;
 }
 
 .active {
